--- a/helloworld.html
+++ b/helloworld.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 	<HTML>
+		<head>
 		<TITLE> My first webpage!</title>
+		</head>
 		<body> First text in my body </body>
 	</HTML>
 	
